--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
