--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="lib/angular-resource/angular-resource.js"></script>
 
     <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
 
