--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json">
 
     <!-- un-comment this code to enable service worker
     <script>
@@ -29,6 +29,12 @@
 
     <script src="lib/ti-segmented-control/dist/ti-segmented-control.js"></script>
 
+    
+    <script src="lib/d3/d3.js"></script>
+    <script src="lib/nvd3/build/nv.d3.js"></script> <!-- or use another assembly -->
+    <script src="lib/angular-nvd3/dist/angular-nvd3.js"></script>
+    <link rel="stylesheet" href="lib/nvd3/build/nv.d3.css">
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -49,4 +55,4 @@
     -->
     <ion-nav-view></ion-nav-view>
   </body>
-</html>
+  </html>
