--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
+  <title>hoge</title>
 
   <link rel="manifest" href="manifest.json">
 
